--- a/css/Global_Styles.css
+++ b/css/Global_Styles.css
@@ -126,5 +126,10 @@ body {
 .body-pages{
     letter-spacing: 1px;
     text-align: center;
-    
+
+}
+
+.parrafo{
+    text-align: center;
+    margin: 100px;
 }
