--- a/css/Scroll-bar-custom.css
+++ b/css/Scroll-bar-custom.css
@@ -1,6 +1,11 @@
 ::-webkit-scrollbar {
-    width: 1.4vw;
-    height: 3.3vh;
+    width: 7px;
     background-color: transparent;
-    opacity: 0.s;
+    /* opacity: 0.5; */
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(68, 68, 68);
+    border-radius: 10px;
+    opacity: 0.2;
 }
