--- a/css/Global_Styles.css
+++ b/css/Global_Styles.css
@@ -1,7 +1,7 @@
 /* ESTILOS GENERALES */
-* { 
-    margin: 0; 
-    padding: 0; 
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -12,9 +12,9 @@ body {
     font-family: 'IBM Plex Mono', monospace;
     font-weight: 300;
 }
-
+/* Estilos de particulas en js */
 #particles-js {
-	height: 100vh; 
+	height: 100vh;
 	width: 100%;
     position: fixed;
     z-index: -1;
@@ -26,7 +26,7 @@ body {
     background-size: cover;
     background-image: url('../img/bg-header3.jpeg');
     background-position:center;
-	margin-left: auto; 
+	margin-left: auto;
 	margin-right: auto;
     margin-top: 15px;
     padding: 20px 30px;
@@ -41,7 +41,7 @@ body {
 }
 
 .barra-navegacion ul {
-    display: flex; 
+    display: flex;
     justify-content: space-between;
     align-items: center;
 }
@@ -51,7 +51,7 @@ body {
     display: inline-block;
 }
 
-.barra-navegacion .logo { 
+.barra-navegacion .logo {
     color:#3dff3e;
     font-size: 50px;
 }
@@ -82,10 +82,11 @@ body {
 .contenido-descripcion .titulo {
     text-transform: uppercase;
     letter-spacing: 5px;
+    text-align: center;
 }
 
 .contenido-descripcion .titulo span:first-child {
-    font-size: 50px; 
+    font-size: 50px;
     display: block;
     font-weight: 300;
 }
@@ -94,6 +95,31 @@ body {
     font-weight: 900;
     font-size: 100px;
 }
+
+.body-pages{
+    letter-spacing: 1px;
+    text-align: center;
+
+}
+
+.Img-1{
+    display: flex;
+    margin-top: 10rem;
+    width: 250px;
+    height: 250px;
+    position: relative;
+    margin-left: 11rem;
+}
+
+.description-cv{
+    text-align: end;
+    position: absolute;
+    margin-left: 30rem;
+    margin-right: 5rem;
+    margin-top: -14rem;
+}
+
+
 
 .contenido-descripcion .btn-link {
     display: inline-block;
@@ -114,20 +140,16 @@ body {
 
 
 @keyframes parpadeo  {
-    0%, 41%, 45%, 47%, 49.5%, 100%  { 
+    0%, 41%, 45%, 47%, 49.5%, 100%  {
         opacity: 1;
     }
 
-    42%, 44%, 46%,48%,  50%  { 
-        opacity: 0; 
+    42%, 44%, 46%,48%,  50%  {
+        opacity: 0;
     }
 }
 
-.body-pages{
-    letter-spacing: 1px;
-    text-align: center;
 
-}
 
 .parrafo{
     text-align: center;
